# SDE_solver

./: .gitignore  CMakeLists.txt  README
integrator/: CMakeLists.txt  aux.cpp  equation.cpp  equation.h  equation_except.cpp  gauss_gen.cpp  main.cpp  randomnumbers.cpp  randomnumbers.h  testcase.h
visualizer/: CMakeLists.txt  main.cpp  view.cpp  view.h  view.ui
